Rewrite Sparkle signature support. Remove some deprecated code.

--- a/SparkEditor/Resources/English.lproj/SELibraryWindow.xib
+++ b/SparkEditor/Resources/English.lproj/SELibraryWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SELibraryWindow">
@@ -28,7 +28,7 @@
             <rect key="contentRect" x="335" y="292" width="725" height="469"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1028"/>
             <value key="minSize" type="size" width="500" height="200"/>
-            <view key="contentView" id="6" customClass="SEBackgroundView">
+            <view key="contentView" id="6">
                 <rect key="frame" x="0.0" y="0.0" width="725" height="469"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
