--- a/SparkPlugins/System/Resources/English.lproj/SystemPlugin.xib
+++ b/SparkPlugins/System/Resources/English.lproj/SystemPlugin.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" promptedForUpgradeToXcode5="NO">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4510"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SystemActionPlugin">
@@ -15,7 +16,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="12" userLabel="View">
             <rect key="frame" x="0.0" y="0.0" width="274" height="134"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
@@ -34,7 +35,7 @@
                         <tabViewItem label="Confirm" identifier="" id="153">
                             <view key="view" id="155">
                                 <rect key="frame" x="0.0" y="0.0" width="258" height="50"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <button id="122">
                                         <rect key="frame" x="1" y="30" width="255" height="18"/>
@@ -98,8 +99,8 @@
                                             <font key="font" metaFont="smallSystem"/>
                                         </buttonCell>
                                         <connections>
-                                            <binding destination="-2" name="enabled" keyPath="sparkAction.shouldNotify" id="193"/>
                                             <binding destination="-2" name="value" keyPath="sparkAction.playFeedback" id="194"/>
+                                            <binding destination="-2" name="enabled" keyPath="sparkAction.shouldNotify" id="193"/>
                                         </connections>
                                     </button>
                                 </subviews>
