--- a/SparkEditor/Resources/English.lproj/SELibraryWindow.xib
+++ b/SparkEditor/Resources/English.lproj/SELibraryWindow.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="16A319" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="SELibraryWindow">
@@ -40,11 +40,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="133" height="393"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <clipView key="contentView" id="FPJ-gk-IqE">
-                                    <rect key="frame" x="1" y="17" width="131" height="375"/>
+                                    <rect key="frame" x="1" y="0.0" width="131" height="392"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="16" headerView="252" id="15" customClass="SETableView">
-                                            <rect key="frame" x="0.0" y="0.0" width="131" height="18"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="131" height="375"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" red="0.82352941999999996" green="0.84705883000000004" blue="0.88627451999999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -79,7 +79,6 @@
                                             </connections>
                                         </tableView>
                                     </subviews>
-                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="251">
                                     <rect key="frame" x="-100" y="-100" width="149" height="15"/>
@@ -101,11 +100,11 @@
                                 <rect key="frame" x="142" y="0.0" width="586" height="393"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <clipView key="contentView" id="34u-hA-TAw">
-                                    <rect key="frame" x="1" y="17" width="584" height="375"/>
+                                    <rect key="frame" x="1" y="0.0" width="584" height="392"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" autosaveColumns="NO" rowHeight="15" headerView="255" id="107" customClass="SETriggerTable">
-                                            <rect key="frame" x="0.0" y="0.0" width="584" height="17"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="584" height="375"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -252,19 +251,13 @@
                             <outlet property="nextKeyView" destination="15" id="67"/>
                         </connections>
                     </searchField>
-                    <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="27">
+                    <box verticalHuggingPriority="750" boxType="separator" id="27">
                         <rect key="frame" x="0.0" y="424" width="726" height="5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <font key="titleFont" metaFont="system"/>
                     </box>
-                    <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="32">
+                    <box verticalHuggingPriority="750" boxType="separator" id="32">
                         <rect key="frame" x="0.0" y="32" width="725" height="5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <font key="titleFont" metaFont="system"/>
                     </box>
                     <customView id="117" customClass="SEApplicationView">
                         <rect key="frame" x="227" y="434" width="266" height="31"/>
@@ -359,11 +352,11 @@
                     <rect key="frame" x="0.0" y="38" width="154" height="391"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" id="rds-8E-tZJ">
-                        <rect key="frame" x="1" y="17" width="152" height="373"/>
-                        <autoresizingMask key="autoresizingMask"/>
+                        <rect key="frame" x="1" y="0.0" width="152" height="390"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="15" headerView="258" id="77" customClass="WBTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="152" height="17"/>
+                                <rect key="frame" x="0.0" y="0.0" width="152" height="373"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -439,7 +432,6 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="257">
                         <rect key="frame" x="-100" y="-100" width="199" height="15"/>
